# EpiSBI

./: Model1.pkl  Model2.pkl  README.md  generate_sim.ipynb  pyproject.toml  requirements.txt
data/: Model3.pkl  Model4.pkl  hantavirus_preprint.xlsx  training_data_AZ.csv
data/Model1/: M1_params.pkl  sim_dataset.pkl
data/Model2/: M2_params.pkl  sim_data.pkl
episbi/: __init__.py  embedding.py  forecasting.py  inference.py  metric.py  prior.py  simulation.py  utils.py
episbi/models/: __init__.py  compartment.py  deterministic_seir.py  stochastic_se1e2e3ir.py  stochastic_seir.py  stochastic_seird.py
models/: __init__.py  epidemic_models.py
notebooks/Model1/: ABC.ipynb  NPE-LSTM.ipynb  NPE.ipynb  PNPE.ipynb
notebooks/Model2/: ABC.ipynb  NPE-LSTM.ipynb  (+3 more)
src/: __init__.py  distance.py  embedding.py  inference.py  utils.py
tutorial/: ABC.ipynb  Model1_ABC.ipynb  PNPE.ipynb
tutorials/: 01-1_Deterministic_seir_model.ipynb  01-2_Stochastic_seir_model.ipynb  01_deterministic_seir.ipynb  02-1_ABC_deterministic_seir.ipynb  02-2_NPE_deterministic_seir.ipynb  02-3_NPE_LSTM_deterministic_seir.ipynb  02-4_PNPE_deterministic_seir.ipynb  02_ABC_seir.ipynb  02_npe_LSTM_seir.ipynb  02_npe_seir.ipynb  02_pnpe_seir.ipynb  02_sbi_seir.ipynb  03-1_ABC_stochastic_seir.ipynb  03-2_NPE_stochastic_seir.ipynb  03-3_NPE_LSTM_stochastic_seir.ipynb  03-4_PNPE_stochastic_seir.ipynb  03_npe_stochastic_seir.ipynb  04-1_NPE_SEIAR.ipynb  04-2_NPE_SEIAR.ipynb  04-3_NPE_SEIRD.ipynb  04_ABC_stochastic_se1e2e3ir.ipynb  04_NPE_stochastic_se1e2e3ir.ipynb  05_Custom_model.ipynb  06_GPU.ipynb
(+21 files in other folders)
