[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "episbi-toolbox"
version = "0.1.0"
description = "Simulation-based inference resources and reusable tools for epidemic models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "pyabc",
    "scipy",
    "sbi>=0.25.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
tutorials = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "numba",
    "openpyxl",
    "seaborn",
]

[tool.setuptools.packages.find]
include = ["episbi*"]
